# ChangeLog for dev-ruby/iobuffer
# Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
# $Header: $

*iobuffer-0.1.3 (09 Dec 2009)

  09 Dec 2009; Hans de Graaff <graaff@gentoo.org> +iobuffer-0.1.3.ebuild,
  +metadata.xml:
  Initial import.
