@@ -1,4 +1,15 @@
+-----BEGIN PGP SIGNED MESSAGE-----
+Hash: SHA1
+
 DIST iobuffer-0.1.3.gem 10240 RMD160 3e027318035569a9461bba7b59bb239b64a6b05e SHA1 04100456e7fc8ead34d13ac5e8f07d888dfc122b SHA256 ab571c7265ad839bcc05f33f6098da976bcff1b1e63ea077a6603efc8e58647f
+EBUILD iobuffer-0.1.3-r1.ebuild 1029 RMD160 cbda2e2f0c45f2590243c073f73ae15abe082dfa SHA1 e7ecd16c4e4f6b007500292e63de1db7b7c282e3 SHA256 c2f07a59a1c0498ae220775ae1dae10362d59325b4bd0806af31c082bf715672
 EBUILD iobuffer-0.1.3.ebuild 479 RMD160 8d323b290c28c9fd87387e3d4e313c7f346ae10f SHA1 2d177fead3d22328504a01e5362425d3089a1857 SHA256 ca9266ee6d7501dc337e870ac9e8902b835e7328756b4fcad50d3efe057fe20e
-MISC ChangeLog 259 RMD160 7046405f08fed7824b490c217ff875c38f0237fd SHA1 81458d34ae3f44ad87c26180dfb927270e5aca27 SHA256 230451b33b59d5d2703ce66a2308e83a305eb0e3057dee1dd9aa2d75f525e877
+MISC ChangeLog 398 RMD160 a5e71b936c2aca186cd8cdc0480f87daca3dc587 SHA1 d28a4abcd34a0134682b00a863f289bf263b7dd1 SHA256 ad04829189989973aa21053801867720fb8e7fc54bfe6794a2183c516a46718d
 MISC metadata.xml 201 RMD160 bbf7920d9809941fb024d20016dbe2fb9f15ff97 SHA1 e629d21795e99a77bd0a6aded1a153fd12d5b2c5 SHA256 c90b12c6600840878686d4544dbc51d97b0715add76b40d9400415cdef6324ad
+-----BEGIN PGP SIGNATURE-----
+Version: GnuPG v2.0.11 (GNU/Linux)
+
+iEYEARECAAYFAktUvg8ACgkQeM7EJeUH71PaeACgjgNfJqcYpBX4FJYW7UIrB1mI
+vXEAn1AU4rYLHp+16jver5NOyJtjaNiL
+=b1yb
+-----END PGP SIGNATURE-----
