@@ -1,6 +1,11 @@
 # ChangeLog for dev-ruby/iobuffer
-# Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
+# Copyright 1999-2010 Gentoo Foundation; Distributed under the GPL v2
 # $Header: $
+
+*iobuffer-0.1.3-r1 (18 Jan 2010)
+
+  18 Jan 2010; Hans de Graaff <graaff@gentoo.org> +iobuffer-0.1.3-r1.ebuild:
+  Convert to ruby-fakegem.
 
 *iobuffer-0.1.3 (09 Dec 2009)
 
